All buttons added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="four_button">4</string>
     <string name="five_button">5</string>
     <string name="six_button">6</string>
+    <string name="zero_button">0</string>
 </resources>
